k8s/apps/base/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.askaboutmydad.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
